# openai-cd2-proxy

./: .gitignore  Containerfile  Dockerfile  Justfile  Makefile  README.md  docker-compose.yaml  main.py  mock_openai_server.py  podman-compose.yaml  pyproject.toml  request_handler.py  requester.py  test_mock_openai_server.py  test_server.py
cd2_proxy/: main.py  request_handler.py
openai_proxy/: __init__.py  main.py  models.py  request_handler.py  utils.py
scripts/: auto_request.py  load_test.py  requester.py  requester2.py
tests/: conftest.py  test_mock_openai_server.py  test_models.py  test_server.py
